--- a/angular.json
+++ b/angular.json
@@ -25,11 +25,13 @@
             "styles": [
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/@ng-select/ng-select/themes/material.theme.css"
+              "node_modules/@ng-select/ng-select/themes/material.theme.css",
+              "node_modules/mdbootstrap/css/mdb.min.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "node_modules/mdbootstrap/js/mdb.min.js"
             ]
           },
           "configurations": {
@@ -38,6 +40,10 @@
                 {
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.prod.ts"
+                },
+                {
+                  "replace": "src/environments/api.ts",
+                  "with": "src/environments/api.prod.ts"
                 }
               ],
               "optimization": true,
@@ -62,7 +68,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "auto-oferty-web:build"
+            "browserTarget": "auto-oferty-web:build",
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
