--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "ng serve --host 0.0.0.0",
+    "docker": "cd ../auto-oferty && docker-compose up",
+    "build": "ng build --proxy-config=proxy.conf.json",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.0.0",
+    "@angular/animations": "^7.0.4",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
-    "@angular/core": "~7.0.0",
+    "@angular/core": "^7.0.4",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
     "@angular/platform-browser": "~7.0.0",
@@ -22,9 +23,12 @@
     "@angular/router": "~7.0.0",
     "@fortawesome/fontawesome-free": "^5.4.2",
     "@ng-select/ng-select": "^2.12.0",
+    "@types/jquery": "^3.3.22",
+    "angular-alert-module": "^2.0.3",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "mdbootstrap": "^4.5.14",
     "ng2-select": "^2.0.0",
     "ngx-select-ex": "^3.6.7",
     "rxjs": "~6.3.3",
@@ -32,12 +36,12 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "~7.0.3",
+    "@angular/cli": "^7.0.6",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
