--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/jquery": "^3.3.22",
     "angular-alert-module": "^2.0.3",
     "bootstrap": "^4.1.3",
+    "class-validator": "^0.9.1",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
     "mdbootstrap": "^4.5.14",
