--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.0.4",
+    "@angular/cdk": "^7.1.1",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "^7.0.4",
@@ -24,6 +25,7 @@
     "@fortawesome/fontawesome-free": "^5.4.2",
     "@ng-select/ng-select": "^2.12.0",
     "@types/jquery": "^3.3.22",
+    "@types/quill": "^2.0.1",
     "angular-alert-module": "^2.0.3",
     "bootstrap": "^4.1.3",
     "class-validator": "^0.9.1",
@@ -32,6 +34,9 @@
     "mdbootstrap": "^4.5.14",
     "ng2-select": "^2.0.0",
     "ngx-select-ex": "^3.6.7",
+    "primeicons": "^1.0.0",
+    "primeng": "^7.0.3",
+    "quill": "^1.3.6",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
