--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0",
+    "start": "ng serve --host 0.0.0.0 --prod",
     "docker": "cd ../auto-oferty && docker-compose up",
     "build": "ng build --proxy-config=proxy.conf.json",
     "test": "ng test",
@@ -26,13 +26,18 @@
     "@ng-select/ng-select": "^2.12.0",
     "@types/jquery": "^3.3.22",
     "@types/quill": "^2.0.1",
+    "alerts": "^0.1.3",
+    "angular-6-datatable": "^0.8.0",
     "angular-alert-module": "^2.0.3",
     "bootstrap": "^4.1.3",
     "class-validator": "^0.9.1",
     "core-js": "^2.5.4",
+    "glyphicons": "^0.2.0",
+    "glyphicons-only-bootstrap": "^1.0.1",
     "jquery": "^3.3.1",
     "mdbootstrap": "^4.5.14",
     "ng2-select": "^2.0.0",
+    "ngx-dropzone-wrapper": "^7.1.0",
     "ngx-select-ex": "^3.6.7",
     "primeicons": "^1.0.0",
     "primeng": "^7.0.3",
