--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@angular/animations": "^7.0.4",
     "@angular/cdk": "^7.1.1",
     "@angular/common": "~7.0.0",
-    "@angular/compiler": "~7.0.0",
+    "@angular/compiler": "^7.2.0",
     "@angular/core": "^7.0.4",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
@@ -47,7 +47,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "^7.0.6",
+    "@angular/cli": "^7.1.4",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
     "@types/jasmine": "~2.8.8",
