--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0 --prod",
+    "start": "ng serve --host 0.0.0.0",
     "docker": "cd ../auto-oferty && docker-compose up",
     "build": "ng build --proxy-config=proxy.conf.json",
     "test": "ng test",
@@ -39,6 +39,7 @@
     "ng2-select": "^2.0.0",
     "ngx-dropzone-wrapper": "^7.1.0",
     "ngx-select-ex": "^3.6.7",
+    "ngx-swiper-wrapper": "^7.2.1",
     "primeicons": "^1.0.0",
     "primeng": "^7.0.3",
     "quill": "^1.3.6",
